<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView android:text="@string/tBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/rCirculo"
            android:text="@string/rbCirculo"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/rCuadrado"
            android:text="@string/rbCuadrado"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/rTriangulo"
            android:text="@string/rbTriangulo"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:id="@+id/rRectangulo"
            android:text="@string/rbRectangulo"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:numeric="decimal"
            android:id="@+id/eLado"
            android:hint="@string/eLado"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:numeric="decimal"
            android:id="@+id/eRadio"
            android:hint="@string/eRadio"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:numeric="decimal"
            android:id="@+id/eAltura"
            android:hint="@string/eAltura"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:numeric="decimal"
            android:id="@+id/eBase"
            android:hint="@string/eBase"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bCalcular"
        android:text="@string/bCalcular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tResult"
        android:textSize="25dp"/>
</LinearLayout>
